# Slacken

./: CMakeLists.txt  README.md  Slacken.pro  main.cpp  main.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  slackclient.cpp  slackclient.h
